--- a/src/components/Menu.astro
+++ b/src/components/Menu.astro
@@ -16,7 +16,7 @@ import Icon from "astro-iconify";
                 <div class="drawer-side">
                     <div class="capa"></div>
                     <label for="my-drawer" aria-label="close sidebar" class="drawer-overlay"></label>
-                    <ul class="menu bg-base-200 text-base-content min-h-full w-80 p-4 flex justify-center items-center">
+                    <ul class="menu bg-[#121212] text-base-content min-h-full w-80 p-4 flex justify-center items-center">
                         <label for="my-drawer" aria-label="close sidebar" class="drawer-overlay"><Icon name="heroicons:x-mark" class="text-3xl"/></label>
                         <li class="nav-item2"><a href="#inicio" onclick="document.getElementById('my-drawer').checked = false;">Inicio</a></li>
                         <li class="nav-item2"><a href="#servicios" onclick="document.getElementById('my-drawer').checked = false;">Sevicios</a></li>
