--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -91,7 +91,7 @@ import { Icon } from 'astro-iconify'
 					<h2 class="text-3xl font-light text-greensea-custom2">Arte, ciencia y pasión</h2>
 					<h1 class="text-3xl font-semibold text-white">al servicio de tu belleza.</h1>
 				</div>
-				<p data-aos="zoom-in" data-aos-anchor-placement="bottom-bottom" class="text-center md:text-start lg:text-xl text-white font-light">Soy <b class="font-semibold">Esme Alcala</b>, estilista apasionado con más de 4 años de experiencia en el mundo de la belleza.</p>
+				<p data-aos="zoom-in" data-aos-anchor-placement="bottom-bottom" class="text-center md:text-start lg:text-xl text-white font-light">Soy <b class="font-semibold">Esme Alcala</b>, Aparatologa y Cosmetologa apasionada con más de 4 años de experiencia en el mundo de la belleza.</p>
 				<p data-aos="zoom-in" data-aos-anchor-placement="bottom-bottom" class="text-center md:text-start lg:text-xl text-white mt-5 font-light">Mi misión es ayudarte a descubrir y realzar tu belleza única a través de técnicas personalizadas y un enfoque artístico. Creo que cada persona merece sentirse segura y hermosa en su propia piel, y es un honor para mí ser parte de ese viaje.</p>
 			</div>
 			<div class="w-full">
