Ajuste de menu close

--- a/src/components/Menu.astro
+++ b/src/components/Menu.astro
@@ -11,7 +11,7 @@ import Icon from "astro-iconify";
             <div class="drawer">
                 <input id="my-drawer" type="checkbox" class="drawer-toggle" />
                 <div class="drawer-content flex items-center justify-end">
-                    <label for="my-drawer" class="drawer-button"><Icon id="my-drawer" name="heroicons:bars-3" class="text-black icon-md" /></label>
+                    <label for="my-drawer" class="drawer-button"><Icon id="my-drawer" name="heroicons:bars-3" class="text-black dark:text-white icon-md" /></label>
                 </div>
                 <div class="drawer-side">
                     <div class="capa"></div>
