--- a/src/components/Servicios.astro
+++ b/src/components/Servicios.astro
@@ -39,10 +39,10 @@ import Icon from "astro-iconify";
                         <img src="/img/gallery1.webp" alt="">
                     </div>
                     <div class="info-servicio">
-                        <span>$1200</span>
+                        <span>$1900</span>
                         <h2>$990</h2>
                         <h4 class="nombre">Full Lips</h4>
-                        <p class="block-with-text descripcion">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione quos, esse et commodi atque error dignissimos officia, laborum provident numquam dolorem impedit laudantium odit aliquam culpa deleniti. Omnis, doloribus dolor.</p>
+                        <p class="block-with-text descripcion">La micropigmentación de labios se utiliza para mejorar la forma, el color y el contorno de los labios. Corrige asimetrías o labios que parecen poco definidos. Aumentan el volumen. A través de la técnica de sombreado y resaltado, se crea la ilusión de labios más voluminosos y carnosos.</p>
                         <div class="btn-group mt-5">
                             <button class="btn1 btn_detalle" data-tooltip-target="tooltip-animation" onclick="my_modal_3.showModal()"><Icon name="heroicons:eye" /></button>
                             <div id="tooltip-animation" role="tooltip" class="absolute z-10 invisible inline-block px-3 py-2 text-sm font-medium text-white transition-opacity duration-300 bg-gray-900 rounded-lg shadow-sm opacity-0 tooltip dark:bg-gray-700">
@@ -61,10 +61,11 @@ import Icon from "astro-iconify";
                         <img src="/img/gallery3.webp" alt="">
                     </div>
                     <div class="info-servicio">
-                        <span>$1000</span>
+                        <span>$1500</span>
                         <h2>$825</h2>
                         <h4 class="nombre">Power Brows</h4>
-                        <p class="block-with-text descripcion">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione quos, esse et commodi atque error dignissimos officia, laborum provident numquam dolorem impedit laudantium odit aliquam culpa deleniti. Omnis, doloribus dolor.</p>
+                        <p class="block-with-text descripcion">
+                            Es una técnica avanzada de micropigmentación que ofrece un efecto de sombreado suave y natural, similar al maquillaje en polvo.</p>
                         <div class="btn-group mt-5">
                             <button class="btn1 btn_detalle" data-tooltip-target="tooltip-animation" onclick="my_modal_3.showModal()"><Icon name="heroicons:eye" /></button>
                             <div id="tooltip-animation" role="tooltip" class="absolute z-10 invisible inline-block px-3 py-2 text-sm font-medium text-white transition-opacity duration-300 bg-gray-900 rounded-lg shadow-sm opacity-0 tooltip dark:bg-gray-700">
@@ -83,10 +84,10 @@ import Icon from "astro-iconify";
                         <img src="/img/gallery5.webp" alt="">
                     </div>
                     <div class="info-servicio">
-                        <span>$850</span>
+                        <span>$1300</span>
                         <h2>$715</h2>
-                        <h4 class="nombre">Punteo de Pestañas</h4>
-                        <p class="block-with-text descripcion">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione quos, esse et commodi atque error dignissimos officia, laborum provident numquam dolorem impedit laudantium odit aliquam culpa deleniti. Omnis, doloribus dolor.</p>
+                        <h4 class="nombre">Delineado de Ojo</h4>
+                        <p class="block-with-text descripcion">Técnica de maquillaje semipermanente por medio de la cual se depositan pigmentos en el párpado, recreando el delineado de ojos o, incluso, un sombreado.</p>
                         <div class="btn-group mt-5">
                             <button class="btn1 btn_detalle" data-tooltip-target="tooltip-animation" onclick="my_modal_3.showModal()"><Icon name="heroicons:eye" /></button>
                             <div id="tooltip-animation" role="tooltip" class="absolute z-10 invisible inline-block px-3 py-2 text-sm font-medium text-white transition-opacity duration-300 bg-gray-900 rounded-lg shadow-sm opacity-0 tooltip dark:bg-gray-700">
