--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import { Icon } from 'astro-iconify'
 	<div class="section-btn-whatsapp" id="element-to-hide">
 		<a href="https://wa.me/7201844426?text=Hola,%20me%20gustaría%20agendar%20una%20cita"><Icon name="ic:baseline-whatsapp" /></a>
 	</div>
-	<div id="alert-1" class="flex items-center p-4 text-white bg-greensea-custom" role="alert">
+	<!-- <div id="alert-1" class="flex items-center p-4 text-white bg-greensea-custom" role="alert">
 		<Icon name="heroicons:calendar-date-range" class="icon-sm" />
 		<span class="sr-only">Info</span>
 		<div class="ms-3 text-sm font-medium">
@@ -22,7 +22,7 @@ import { Icon } from 'astro-iconify'
 			<span class="sr-only">Close</span>
 			<Icon name="heroicons:x-mark" class="text-white" />
 		</button>
-	</div>
+	</div> -->
 	<div id="inicio"></div>
 	<Menu />
 	<section class="h-[550px] md:h-auto">
@@ -84,7 +84,7 @@ import { Icon } from 'astro-iconify'
 	<Servicios/>
 	<section>
 		<div class="bg-greensea-custom mt-20 md:mt-32 lg:mt-40 relative px-4 py-10 h-[900px] md:h-[600px] scroll-mt-12 flex flex-row flex-wrap" id="quiensoy">
-			<img data-aos="zoom-in" data-aos-anchor-placement="bottom-bottom" class="absolute bottom-0 -left-12 w-[80%] sm:w-[55%] md:w-[45%] lg:w-[380px] lg:left-0" src="/img/esme.png" alt="">
+			<img data-aos="zoom-in" data-aos-anchor-placement="bottom-bottom" class="absolute bottom-0 -left-20 w-[80%] sm:w-[55%] md:w-[45%] lg:w-[380px] lg:left-0" src="/img/esme.png" alt="">
 			<div class="hidden md:flex md:w-[35%]"></div>
 			<div class="w-full md:w-[65%]">
 				<div data-aos="zoom-in" data-aos-anchor-placement="bottom-bottom" class="text-center md:text-start mb-10">
@@ -106,8 +106,8 @@ import { Icon } from 'astro-iconify'
 						<span class="text-greensea-custom2 sm:text-xl md:text-lg">certificaciones</span>
 					</div>
 					<div data-aos="zoom-in" data-aos-anchor-placement="bottom-bottom" class="flex items-center justify-center gap-3 w-full">
-						<a href="https://www.facebook.com/esme.espinoza04" target="_blank"><Icon name="mdi:facebook" class="text-greensea-custom2 w-[40px] upper" /></a>
-						<a href="https://www.instagram.com/esmealca31/" target="_blank"><Icon name="mdi:instagram" class="text-greensea-custom2 w-[40px] upper" /></a>
+						<a href="https://www.facebook.com/Esme.Pmu.31?mibextid=ZbWKwL" target="_blank"><Icon name="mdi:facebook" class="text-greensea-custom2 w-[40px] upper" /></a>
+						<a href="https://www.instagram.com/esme.pmu.31?utm_source=qr&igsh=cm5sMm8yemR6OXpt" target="_blank"><Icon name="mdi:instagram" class="text-greensea-custom2 w-[40px] upper" /></a>
 					</div>
 				</div>
 			</div>
@@ -189,8 +189,8 @@ import { Icon } from 'astro-iconify'
 		<div class="mx-auto w-full max-w-screen-xl">
 			<div class="px-4 py-6 text-center lg:flex lg:items-center lg:justify-between lg:px-20">
 				<div class="flex items-center justify-center mt-4 lg:mt-0 space-x-2">
-					<a href="https://www.facebook.com/esme.espinoza04"><Icon name="mdi:facebook" class="text-white w-[35px] upper" /></a>
-					<a href="https://www.instagram.com/esmealca31/"><Icon name="mdi:instagram" class="text-white w-[35px] upper" /></a>
+					<a href="https://www.facebook.com/Esme.Pmu.31?mibextid=ZbWKwL"><Icon name="mdi:facebook" class="text-white w-[35px] upper" /></a>
+					<a href="https://www.instagram.com/esme.pmu.31?utm_source=qr&igsh=cm5sMm8yemR6OXpt"><Icon name="mdi:instagram" class="text-white w-[35px] upper" /></a>
 				</div>
 				<span class="text-[12px] text-white sm:text-center">© 2024 Esme Studio. Todos los derechos reservados.
 				</span>				
